cmake_minimum_required(VERSION 2.6)

PROJECT(ieee8021x C)
INCLUDE(GNUInstallDirs)
ADD_DEFINITIONS(-Os -ggdb -Wall -Werror --std=gnu99 -Wmissing-declarations)

SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")

SET(SOURCES main.c)
SET(LIBS ubox ubus uci)

ADD_EXECUTABLE(ieee8021x ${SOURCES})
TARGET_LINK_LIBRARIES(ieee8021x ${LIBS})
INSTALL(TARGETS ieee8021x
	RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}
)
